.k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-service
  namespace: ${APP_NAMESPACE}
spec:
  type: NodePort
  selector:
    app: ${APP_NAME}
  ports:
    - protocol: TCP
      port: ${APP_PORT}
      targetPort: ${APP_PORT}
      nodePort: ${APP_NODE_PORT}
