.k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-backend-ingress-todolist
  namespace: todolist
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: minipc-todolist
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-backend-service
            port:
              number: 3000
